fix: Set server address to 0.0.0.0 in application-prod.properties
- Changed server.address from ${SERVER_ADDRESS} to 0.0.0.0 for universal
accessibility.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=${SERVER_PORT}
-server.address=${SERVER_ADRESS}
+server.address=0.0.0.0
