--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,5 +4,5 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=${SERVER_PORT}
+server.port=${SERVER_PORT:8080}
 server.address=0.0.0.0
